--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,19 @@ body {
 h1 {
   margin-top: 30px;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header img {
+  height: 40px;
+  width: 40px;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
