--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,16 @@ h1 {
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
-.header img {
-  height: 40px;
-  width: 40px;
+.react-logo {
+  width: 55px;
 }
 
 .nav-links {
   list-style: none;
   display: flex;
   gap: 20px;
+  font-size: 1.1rem;
 }
