--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  padding: 20px;
   font-family: Arial, Helvetica, sans-serif;
   background: #27292c;
   color: white;
@@ -9,10 +14,23 @@ h1 {
   margin-top: 30px;
 }
 
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: space-between;
+  align-items: space-between;
+}
+
 .header {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 20px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .react-logo {
@@ -24,4 +42,34 @@ h1 {
   display: flex;
   gap: 20px;
   font-size: 1.1rem;
+}
+
+.main-content {
+  padding: 20px;
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.main-title {
+  font-size: 2rem;
+  text-align: left;
+}
+
+.main-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  font-size: 1.1rem;
+  padding-left: 3rem;
+}
+
+.footer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: #000;
 }
