--- a/src/index.css
+++ b/src/index.css
@@ -4,24 +4,21 @@
   box-sizing: border-box;
 }
 
-body {
+.root {
   font-family: Arial, Helvetica, sans-serif;
   background: #27292c;
   color: white;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: space-between;
+  align-content: center;
 }
 
 h1 {
   margin-top: 30px;
-}
-
-.container {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  justify-content: space-between;
-  align-items: space-between;
 }
 
 .header {
@@ -47,9 +44,11 @@ h1 {
 .main-content {
   padding: 20px;
   margin: 20px;
+  margin-top: -10rem;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  justify-content: start;
 }
 
 .main-title {
